# AnarchoBot

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: pretrain.yaml  pretrain_mlx_phase1.yaml  pretrain_mlx_smoke.yaml  pretrain_ultrafineweb.yaml  pretrain_unified.yaml  rlhf.yaml  sft.yaml  sft_mlx.yaml  sft_quick_test.yaml
data/pretrain_shards/: shard_00000_x.npy  shard_00000_y.npy  shard_00001_x.npy  shard_00001_y.npy  shard_00002_x.npy  shard_00002_y.npy  shard_00003_x.npy  shard_00003_y.npy  shard_00004_x.npy  shard_00004_y.npy  shard_00005_x.npy  shard_00005_y.npy  shard_00006_x.npy  shard_00006_y.npy  shard_00007_x.npy  shard_00007_y.npy  shard_00008_x.npy  shard_00008_y.npy  shard_00009_x.npy  shard_00009_y.npy  shard_00010_x.npy  shard_00010_y.npy  shard_00011_x.npy  shard_00011_y.npy  shard_00012_x.npy  shard_00012_y.npy  shard_00013_x.npy  shard_00013_y.npy  shard_00014_x.npy  shard_00014_y.npy  shard_00015_x.npy  shard_00015_y.npy  shard_00016_x.npy  shard_00016_y.npy  shard_00017_x.npy  shard_00017_y.npy  shard_00018_x.npy  shard_00018_y.npy  shard_00019_x.npy  shard_00019_y.npy  (+76 more)
docs/: architecture.md  configuration.md  quickstart.md  troubleshooting.md
examples/: README.md
scripts/: benchmark.py  chat.py  chat_mlx.py  clear_cache.py  convert_npz_to_mmap.py  create_mlx_shards.py  model_stats.py  prepare_corpus.py  prepare_sft_shards.py  pretrain_data_pipeline.py  setup_verification.py  stream_for_token_budget.py  stream_text_dataset.py  train_mlx.py  train_tokenizer.py
src/anarchobot/: config.py  (+14 more)
(+7 files in other folders)
